--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
   </head>
   <body id="gradient">
     <div class="container">
-    <h1>Background Generator</h1>
+    <h1>Background Gradient Generator</h1>
     <section>
     <input class="color1" type="color" name="color1" value="#00ff00" />
     <input class="color2" type="color" name="color2" value="#ff0000" />
